--- a/.github/workflows/daily_digest.yml
+++ b/.github/workflows/daily_digest.yml
@@ -85,27 +85,55 @@ jobs:
           echo "=== Testing Gemini API Connection ==="
           python -c "
           import os
-          api_key = os.environ.get('GEMINI_API_KEY', '')
-          print(f'API Key from env: {len(api_key)} chars')
-          print(f'Key prefix: {api_key[:8]}...' if api_key else 'No key')
+          import sys
           
-          if api_key:
-              try:
-                  from google import genai
-                  from google.genai import types
-                  client = genai.Client(api_key=api_key)
-                  response = client.models.generate_content(
-                      model='gemini-2.0-flash',
-                      contents='Say hello in one word.',
-                      config=types.GenerateContentConfig(max_output_tokens=10)
-                  )
-                  print(f'✅ Gemini API test SUCCESS: {response.text}')
-              except Exception as e:
-                  print(f'❌ Gemini API test FAILED: {type(e).__name__}: {e}')
-                  import traceback
-                  traceback.print_exc()
-          else:
-              print('❌ No API key available for testing')
+          # 1. 检查环境变量
+          api_key = os.environ.get('GEMINI_API_KEY', '')
+          print(f'[1] API Key from env: {len(api_key)} chars')
+          print(f'    Key prefix: {api_key[:8]}...' if api_key else '    No key')
+          
+          # 2. 检查 pydantic settings
+          print()
+          print('[2] Testing pydantic-settings...')
+          from app.config import settings
+          print(f'    settings.ai_provider: {settings.ai_provider}')
+          print(f'    settings.gemini_api_key: {len(settings.gemini_api_key)} chars')
+          print(f'    settings.gemini_model: {settings.gemini_model}')
+          
+          # 3. 测试 AI Provider 工厂
+          print()
+          print('[3] Testing AI Provider Factory...')
+          try:
+              from app.providers.factory import get_ai_provider
+              provider = get_ai_provider()
+              print(f'    ✅ Provider created: {provider.provider_name} / {provider.model_name}')
+          except Exception as e:
+              print(f'    ❌ Provider creation FAILED: {type(e).__name__}: {e}')
+              import traceback
+              traceback.print_exc()
+              sys.exit(1)
+          
+          # 4. 测试实际 API 调用
+          print()
+          print('[4] Testing actual Gemini API call...')
+          try:
+              from google import genai
+              from google.genai import types
+              client = genai.Client(api_key=settings.gemini_api_key)
+              response = client.models.generate_content(
+                  model=settings.gemini_model,
+                  contents='Say hello in one word.',
+                  config=types.GenerateContentConfig(max_output_tokens=10)
+              )
+              print(f'    ✅ Gemini API test SUCCESS: {response.text}')
+          except Exception as e:
+              print(f'    ❌ Gemini API test FAILED: {type(e).__name__}: {e}')
+              import traceback
+              traceback.print_exc()
+              sys.exit(1)
+          
+          print()
+          print('=== All tests passed! ===')
           "
 
       - name: Run daily digest pipeline
@@ -146,10 +174,13 @@ jobs:
           echo "=== Pipeline completed ==="
           echo ""
           echo "=== Key log lines ==="
-          grep -E "(AI provider|GeminiProvider|Starting AI|Analysis|success|failed|bullish|bearish|COMPLETED|Error|❌|✅|🚀)" pipeline.log || echo "No matching patterns found"
+          grep -E "(AI provider|GeminiProvider|Starting AI|Analysis|success|failed|bullish|bearish|COMPLETED|Error|❌|✅|🚀|Continuing without|provider created|Calling AI)" pipeline.log || echo "No matching patterns found"
           echo ""
           echo "=== Stats summary ==="
-          grep -E "(Analyzed|Collected|Delivered)" pipeline.log | tail -20 || echo "No stats found"
+          grep -E "(Analyzed|Collected|Delivered|Stats)" pipeline.log | tail -20 || echo "No stats found"
+          echo ""
+          echo "=== Full AI-related logs ==="
+          grep -i "ai\|gemini\|provider\|analysis\|neutral" pipeline.log | head -50 || echo "No AI logs found"
 
       - name: Upload digest as artifact
         uses: actions/upload-artifact@v4
