Fix Telegram/Email output and add detailed logging - Add aiohttp to requirements.txt - Add error handling for missing aiohttp - Add detailed logging for output delivery status

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -23,6 +23,7 @@ notion-client>=2.2.1
 # Rate Limiting & Async
 aiolimiter>=1.1.0
 tenacity>=8.2.3
+aiohttp>=3.9.0
 
 # Utilities
 python-dateutil>=2.8.2
